--- a/index.html
+++ b/index.html
@@ -6,24 +6,32 @@
         <title>Code Quiz</title>
         <meta name='viewport' content='width=device-width, initial-scale=1'>
         <link rel='stylesheet' type='text/css' media='screen' href='./assets/css/style.css'>
-        <!--<script src='main.js'></script>-->
+        <!---->
     </head>
 
     <body>
         <header>
             <p class="view">View High Scores</p>
-            <p class="timer">Time: 00</p>
+            <p class="timer">Time: </p>
             <!--thing are going to go here eventually - like 'view high scores' and the timer on the right-->
         </header>
 
         <main class="page-content" id="page-content">
             <!--Add a greeting here-->
-            <h1>Welcome To The Coding Quiz Challenge</h1>
+            <div class="start-screen">
+                <h1>Welcome To The Coding Quiz Challenge</h1>
             <p>
-                Try to answer the following code-related questions within the time limit. 
-                Keep in mind that incorrect answers will penalize your score/time by 10 seconds
+                This is a quiz that will test your knowledge on the MCU. Try your best to answer all the questions 
+                as fast as you can! If you answer a question incorrectly, you'll lose 10 seconds of time. At the end, 
+                enter your initials and high score.
+                <br>
+                Good luck!
             </p>
-            <button>Start Quiz</button>
+            <button id="start-button">Start Quiz</button>
+            </div>
+
+
         </main>
+        <!--<script src='./assets/js/script.js'></script>-->
     </body>
 </html>
