started implementing the bare bones of logic for the quiz

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
 
             <div class="hidden" id="questions">
-                <h3 class="question" id="question-title">Test</h3>
+                <h3 class="question" id="question-title"></h3>
                 <div class="answers">
                     <button class="answer-button" id="a1">Test1</button>
                     <button class="answer-button" id="a2">Test2</button>
