added result alerts and the beginnings of an end screen

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
             <div class="hidden" id="questions">
                 <h3 class="question" id="question-title"></h3>
                 <div class="answers">
-                    <button class="answer-button" id="a1">Test1</button>
-                    <button class="answer-button" id="a2">Test2</button>
-                    <button class="answer-button" id="a3">Test3</button>
+                    <button class="answer-button" id="a1"></button>
+                    <button class="answer-button" id="a2"></button>
+                    <button class="answer-button" id="a3"></button>
                 </div>
             </div>
 
