the beginnings of the timer function (need to figure out how to stop it)

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
         <header>
             <p class="view">View High Scores</p>
-            <p class="timer">Time: </p>
+            <p class="timer" id="timer">Time: 60</p>
             <!--thing are going to go here eventually - like 'view high scores' and the timer on the right-->
         </header>
 
