stored highscores and made them appear in the scores page

--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset='utf-8'>
         <meta http-equiv='X-UA-Compatible' content='IE=edge'>
         <title>Code Quiz</title>
         <meta name='viewport' content='width=device-width, initial-scale=1'>
         <link rel='stylesheet' type='text/css' media='screen' href='./assets/css/style.css'>
-        <!---->
     </head>
 
     <body>
         <header>
-            <p class="view">View High Scores</p>
+            <a href="./scores.html" class="view">View High Scores</a>
             <p class="timer" id="timer">Time: 60</p>
             <!--thing are going to go here eventually - like 'view high scores' and the timer on the right-->
         </header>
@@ -19,11 +18,11 @@
         <main class="page-content" id="page-content">
             <!--Add a greeting here-->
             <div class="start-screen" id="start-screen">
-                <h1>Welcome To The Coding Quiz Challenge</h1>
+                <h1>Welcome to the Ultimate Marvel Cinematic Universe Quiz</h1>
                 <p>
-                    This is a quiz that will test your knowledge on the MCU. Try your best to answer all the questions 
-                    as fast as you can! If you answer a question incorrectly, you'll lose 10 seconds of time. At the end, 
-                    enter your initials and high score.
+                    Are you a fan of the MCU? Well let's put your knowledge to the test! This is a quiz that will test 
+                    your knowledge on the MCU. Try your best to answer all the questions as fast as you can! If you answer 
+                    a question incorrectly, you'll lose 10 seconds of time. At the end, enter your initials and high score.
                     <br>
                     Good luck!
                 </p>
