added general comments, changed minor things to make more sense of the overall code for anyone who ma find it to understand it coherently.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <main class="page-content" id="page-content">
             <!--Add a greeting here-->
-            <div class="start-screen" id="start-screen">
+            <div class="visible" id="main-screen">
                 <h1>Welcome to the Ultimate Marvel Cinematic Universe Quiz</h1>
                 <p>
                     Are you a fan of the MCU? Well let's put your knowledge to the test! This is a quiz that will test 
