--- a/scores.html
+++ b/scores.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <main class="page-content">
-            <div class="start-screen">
+            <div class="visible">
                 <h1>Scores</h1>
 
                 <ol id="scores-list">
